--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "mongoose": "^8.1.3",
+    "multer": "^1.4.5-lts.1",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
